# usb-video-class

./: BMP.hs  ExtraUtils.hs  Main.hs  README.mkd  Utils.hs  ghci.sh  haddock.sh  images.sh  read_video.sh  run.sh  test_images.sh  test_iter.sh  test_video.sh  usb-video-class.cabal  video.sh
Codec/UVC/: RGBA.hs
Demo/: BMP.hs  Common.hs  Iteratee.hs  Main.hs
System/USB/: UVC.hs
System/USB/UVC/: Descriptors.hs  DeviceHandling.hs  Internals.hs  Iteratee.hs  Requests.hs  Streaming.hs  Unsafe.hs
include/: uvc.h
