name:          usb-video-class
version:       0.0.0.0
cabal-version: >=1.6
build-type:    Simple
license:       BSD3
license-file:  LICENSE
copyright:     2011 John Obbele <john.obbele@gmail.com>
author:        John Obbele <john.obbele@gmail.com>
maintainer:    John Obbele <john.obbele@gmail.com>
bug-reports:   John Obbele <john.obbele@gmail.com>
stability:     experimental
category:      System,USB
synopsis:      Communicate with USB Video Class devices
description:   A small demo to showcase asynchronous transfers.
               .
               For further references, you should consult:
               .
               * The USB Video Class v1.0a specification:
                 <http://www.quickcamteam.net/archive/USB_Video_Class_1_0a.zip>
               .
               * The USB Video Class v1.1 specification:
                 <http://www.usb.org/developers/devclass_docs/USB_Video_Class_1_1.zip>

extra-source-files: README.mkd
extra-source-files: include/uvc.h

source-repository head
  Type:     git
  Location: git://github.com/obbele/usb-video-class.git

Flag Library
  description: Build the library (experimental option)
  default:     False

Flag Test
  description: Build the test program
  default:     True

Flag Iteratee
  description: Build the iteratee-test program
  default:     False

Flag BMP
  description: Build the BMP test program
  default:     False

library
  GHC-Options: -Wall
  GHC-Options: -fno-warn-unused-do-bind

  if flag(Library)
      Buildable: True
  else
      Buildable: False

  build-depends: base                 >= 4     && < 4.4
               , base-unicode-symbols >= 0.1.1 && < 0.3
               , bytestring           >= 0.9   && < 0.10
               , text                 >= 0.5   && < 0.12
               , usb                  >= 1.0
               , cereal               >= 0.3

  exposed-modules: System.USB.UVC.Descriptors
                 , System.USB.UVC.DeviceHandling
                 , System.USB.UVC.Requests
                 , System.USB.UVC.Streaming
                 , System.USB.UVC

  other-modules: System.USB.UVC.Unsafe
               , ExtraUtils
               , Utils

  include-dirs: include

executable test
  GHC-Options: -Wall
  GHC-Options: -fno-warn-unused-do-bind
  GHC-Options: -threaded
  GHC-Options: -rtsopts

  if flag(Test)
      Buildable: True
  else
      Buildable: False

  main-is:       Demo/Main.hs
  other-modules: System.USB.UVC.Descriptors
               , System.USB.UVC.DeviceHandling
               , System.USB.UVC.Requests
               , System.USB.UVC.Streaming
               , System.USB.UVC
               , System.USB.UVC.Unsafe
               , ExtraUtils
               , Utils
               , Demo.Common

  include-dirs: include

executable iteratee-test
  GHC-Options: -Wall
  GHC-Options: -fno-warn-unused-do-bind
  GHC-Options: -threaded
  GHC-Options: -rtsopts

  if flag(Iteratee)
      Buildable: True
  else
      Buildable: False

  build-depends: transformers >= 0.2
               , iteratee >= 0.8
               , usb-iteratee >= 0.4

  main-is:       Demo/Iteratee.hs
  other-modules: System.USB.UVC.Descriptors
               , System.USB.UVC.DeviceHandling
               , System.USB.UVC.Requests
               , System.USB.UVC.Streaming
               , System.USB.UVC.Iteratee
               , System.USB.UVC
               , System.USB.UVC.Unsafe
               , ExtraUtils
               , Utils
               , Demo.Common

  include-dirs: include

executable bmp
  GHC-Options: -Wall
  GHC-Options: -fno-warn-unused-do-bind
  GHC-Options: -threaded
  GHC-Options: -rtsopts

  build-depends:  bmp >= 1.1

  if flag(BMP)
      Buildable: True
  else
      Buildable: False

  main-is:       Demo/BMP.hs
  other-modules: System.USB.UVC.Descriptors
               , System.USB.UVC.DeviceHandling
               , System.USB.UVC.Requests
               , System.USB.UVC.Streaming
               , System.USB.UVC
               , System.USB.UVC.Unsafe
               , Codec.UVC.RGBA
               , ExtraUtils
               , Utils
               , Demo.Common

  include-dirs: include
